fix: use <select> instead of <datalist> to allow picking a trace on mobile

--- a/host/assets/css/app.css
+++ b/host/assets/css/app.css
@@ -85,3 +85,7 @@ abbr:hover {
 .sos a {
     color: teal;
 }
+
+form {
+    margin: 1em;
+}
